@@ -75,6 +75,8 @@ Deprecations
  * 2.1.0
 
 Fixes
+  * Fixed OpenMMParser not working when some or none of the elements are set
+    (Issue #3317, PR #3511)
   * Use uint64_t loop counters in C level distance functions to avoid overflow
     for large arrays (Issue #3512, PR #3513).
   * Prevents attempts to close an already closed NamedStream (Issue #3386)
